--- a/bin/Rakefile
+++ b/bin/Rakefile
@@ -18,15 +18,23 @@ namespace :generate do
     end
     require 'rubygems'
     gem 'templette'
-    require 'templette'
-    template = Templette::Template.new(ENV['TEMPLATE'])
-    ENV['NAMES'].split(/\s+/).each do |name|
-      unless File.exists?("pages/#{name}.yml")
-        File.open("pages/#{name}.yml", 'w') {|f| f << template.to_yaml }
-      end
-    end
+    require 'file_generator'
+    FileGenerator.page_yaml(ENV['TEMPLATE'], ENV['NAMES'])
   end
   
+  desc "Generate an empty generator file with NAME=example"
+  task :helper do
+    unless ENV['NAME']
+      puts "You must enter a name for your helper."
+      return
+    end
+    require 'rubygems'
+    gem 'templette'
+    require 'file_generator'
+    FileGenerator.helper(ENV['NAME'])
+  end 
+    
+      
 end
 
 task :default => :build
