i am so dumb, i am so dumb. fixed rake file to match the methods that are actually defined.

--- a/bin/Rakefile
+++ b/bin/Rakefile
@@ -13,7 +13,7 @@ task :clean do
   require 'rubygems'
   gem 'templette'
   require 'templette'
-  Templette::Generator.new.run(:clean) 
+  Templette::Generator.new.clean
 end
 
 namespace :generate do
