Don't require the colon in the render line.  Looks more like a method call now.

--- a/test_site/test_data/template_with_render.yml
+++ b/test_site/test_data/template_with_render.yml
@@ -3,4 +3,4 @@ sections:
   title:
     text: Home
   main:
-   content: render:test_data/hammy.html.haml
+   content: render test_data/hammy.html.haml
